[package]
name = "hasher_agg"
version = "0.1.0"
authors = ["Nicholas Buckeridge <bucknich@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
env_logger = "0.8.3"
itertools = "0.10.0"
sha2 = "0.9.3"
